--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   </head>
   <body>
     <header></header>
+    <div>
+      <input id="filterInput" type="text" placeholder="Search movie..." />
+    </div>
     <nav class="filterRadioBtns">
       <div>
         <input
@@ -17,7 +20,6 @@
           id="latest-movies"
           name="filter"
           value="latest-movies"
-          
         />
         <label for="latestMovies">Latest movies, 2014 or later</label>
       </div>
