Styled css for mobile, tablet and desktop

--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script defer src="/movieList.js?speed=2"></script>
     <script defer src="/script.js"></script>
+    <link rel="stylesheet" href="/style.css" />
     <title>Film finder</title>
   </head>
   <body>
     <header></header>
+    <div class="title">Jacop's Film Finder</div>
     <div>
       <input id="filterInput" type="text" placeholder="Search movie..." />
     </div>
@@ -61,7 +63,7 @@
       </div>
     </nav>
     <main>
-      <ul id="movieList"></ul>
+      <ul class="movieList" id="movieList"></ul>
     </main>
     <footer></footer>
   </body>
